--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shiv Sagar | FULL-Stack Developer & Software Engineer</title>
+    <title>Shiv Sagar | Full-Stack Developer & Software Engineer</title>
     <meta
       name="title"
-      content="Shiv Sagar | FULL-Stack Developer & Software Engineer"
+      content="Shiv Sagar | Full-Stack Developer & Software Engineer"
     />
     <meta
       name="description"
@@ -14,7 +14,7 @@
     />
     <meta
       name="keywords"
-      content="Shiv Sagar, FULL-Stack Developer, Software Engineer, React Developer, Node.js, JavaScript, C++, Java, Web Development, Portfolio"
+      content="Shiv Sagar, Shiv, Shiv Sagar Web Developer, Shiv Sagar Developer, Shiv Sagar Portfolio, Shiv Sagar Full-Stack Developer, Shiv Sagar Software Engineer, Shiv Sagar React Developer, Shiv Sagar Node.js, Shiv Sagar JavaScript, Shiv Sagar C++, Shiv Sagar Java, Web Development, Portfolio, MERN Stack, MongoDB, Express, React, Node.js, C++, Java, Software Engineering, High-Performance Systems"
     />
     <meta name="author" content="Shiv Sagar" />
     <meta name="robots" content="index, follow" />
